Uploaded image for project: 'Lustre'
  1. Lustre
  2. LU-7437

"lctl list_param -R" can't list the parameters recursively

XMLWordPrintable

    • Icon: Bug Bug
    • Resolution: Fixed
    • Icon: Critical Critical
    • Lustre 2.8.0
    • Lustre 2.8.0
    • None
    • 3
    • 9223372036854775807

      When running "lctl list_param -R '*', it only shows /proc/{fs,sys}/{lustre,lnet}/ *, not recursively.

      [root@centos6-1 utils]# ./lctl list_param -R '*'
      devices
      echo_client
      error: list_param: /proc/fs/lustre/echo_client/*: Found no match
      fld
      error: list_param: /proc/fs/lustre/fld/*: Found no match
      health_check
      jobid_name
      jobid_var
      ldlm
      error: list_param: /proc/fs/lustre/ldlm/*: Found no match
      llite
      error: list_param: /proc/fs/lustre/llite/*: Found no match
      lmv
      ...
      

      I will submit a patch later.

            emoly.liu Emoly Liu
            emoly.liu Emoly Liu
            Votes:
            0 Vote for this issue
            Watchers:
            8 Start watching this issue

              Created:
              Updated:
              Resolved: